--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@klaytn/ethers-ext": "^0.9.7-beta",
     "@livekit/components-react": "^1.4.1",
     "@livekit/components-styles": "^1.0.7",
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.7.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -27,6 +27,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^4.33.0",
     "@uploadthing/react": "^6.0.2",
@@ -40,7 +41,7 @@
     "livekit-client": "^1.15.1",
     "livekit-server-sdk": "^1.2.7",
     "lucide-react": "^0.292.0",
-    "next": "14.0.3",
+    "next": "14.0.4",
     "next-themes": "^0.2.1",
     "query-string": "^8.1.0",
     "react": "^18",
@@ -65,7 +66,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
-    "prisma": "^5.6.0",
+    "prisma": "^5.7.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
